--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,10 @@
-<p>This is footer.</p>
+<div id="footer" class="container-fluid text-center pt-3">
+    <h4>Powered By: 
+        <span><img src="images/jikan_api.png" alt="" style="width: 100px;"></span>
+    </h4>    
+    <p>Copyright @2023 PoomrapeeS - All Right Reserved</p>
+</div>
 
 </body>
+
 </html>
